--- a/Workshop_Step1.ipynb
+++ b/Workshop_Step1.ipynb
@@ -95,11 +95,11 @@
       "metadata": {
         "id": "F9H7Nf4tJ8WF",
         "colab_type": "code",
+        "outputId": "79113375-bbe6-4bde-c687-8ab458748571",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
-        },
-        "outputId": "79113375-bbe6-4bde-c687-8ab458748571"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -141,7 +141,7 @@
         "download_file_from_google_drive('1nzvm--XkmhjHgngNdjaemFIViXekaVWx', 'sm_dataset.zip')\n",
         "!unzip 'sm_dataset.zip'"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -203,17 +203,17 @@
       "metadata": {
         "id": "UghPsiwmJ8Wr",
         "colab_type": "code",
+        "outputId": "44762eba-e371-4f80-e319-d9a0a8360b5d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "44762eba-e371-4f80-e319-d9a0a8360b5d"
+        }
       },
       "cell_type": "code",
       "source": [
         "df.head()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -308,17 +308,17 @@
       "metadata": {
         "id": "FGS4s5JOJ8Wx",
         "colab_type": "code",
+        "outputId": "67591326-d9aa-4f9d-c3f0-cb09692c1c17",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "67591326-d9aa-4f9d-c3f0-cb09692c1c17"
+        }
       },
       "cell_type": "code",
       "source": [
         "print(\"Número de classes:\", len(df.domain_id.unique()))"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -343,17 +343,17 @@
       "metadata": {
         "id": "qYqcMdgIJ8W1",
         "colab_type": "code",
+        "outputId": "e87c6117-1745-42af-c2a9-1e80431003d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e87c6117-1745-42af-c2a9-1e80431003d0"
+        }
       },
       "cell_type": "code",
       "source": [
         "print(\"Número de ejemplos:\", len(df))"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -380,11 +380,11 @@
       "metadata": {
         "id": "wbNvdhWkJ8W6",
         "colab_type": "code",
+        "outputId": "50d5108b-ad75-48a8-d714-d97e59a747d7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 364
-        },
-        "outputId": "50d5108b-ad75-48a8-d714-d97e59a747d7"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -395,7 +395,7 @@
         "             .rename(columns={\"title\":\"counts\"}))['counts'].plot.line()\n",
         "plt.set_ylim(0,5500)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -427,11 +427,11 @@
       "metadata": {
         "id": "gFLW2OHvJ8XA",
         "colab_type": "code",
+        "outputId": "7be568f5-0f4f-46fa-9ebf-de5ddb5d346e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 364
-        },
-        "outputId": "7be568f5-0f4f-46fa-9ebf-de5ddb5d346e"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -440,7 +440,7 @@
         "             .reset_index()[['domain_id','title']]\n",
         "             .rename(columns={\"title\":\"counts\"}))['counts'].plot.hist()"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -580,11 +580,11 @@
       "metadata": {
         "id": "pHCbkzwEJ8Xc",
         "colab_type": "code",
+        "outputId": "53876c87-2bfa-4d16-ca05-5e7284a1e3fb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "53876c87-2bfa-4d16-ca05-5e7284a1e3fb"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -597,7 +597,7 @@
         "    \n",
         "print(\"Time to vectorize: \" + str(1000*(toc-tic)) + \" ms\")\n"
       ],
-      "execution_count": 55,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -677,18 +677,18 @@
       "metadata": {
         "id": "C5hbhvf7Nq8z",
         "colab_type": "code",
+        "outputId": "631cabb4-733e-4a11-ed27-a2c76bb57118",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "631cabb4-733e-4a11-ed27-a2c76bb57118"
+        }
       },
       "cell_type": "code",
       "source": [
         "print(text_sequences.shape)\n",
         "print(encoded_docs.shape)\n"
       ],
-      "execution_count": 77,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -704,11 +704,11 @@
       "metadata": {
         "id": "-G5EMEiN2pyf",
         "colab_type": "code",
+        "outputId": "0a2b2cb8-9f4c-4f84-dba7-c89905bf1386",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        },
-        "outputId": "0a2b2cb8-9f4c-4f84-dba7-c89905bf1386"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -720,7 +720,7 @@
         "  if tkn > 0:\n",
         "    print(idx_tkn[tkn] ,encoded_docs[example_idx][tkn])\n"
       ],
-      "execution_count": 59,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -778,17 +778,17 @@
       "metadata": {
         "id": "3PUsEtRaJF-W",
         "colab_type": "code",
+        "outputId": "787e84b6-97a9-430d-85f0-96f289e22dec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "787e84b6-97a9-430d-85f0-96f289e22dec"
+        }
       },
       "cell_type": "code",
       "source": [
         "df[df['label']==2].head()"
       ],
-      "execution_count": 61,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -999,11 +999,11 @@
       "metadata": {
         "id": "lv8ShNIygWVW",
         "colab_type": "code",
+        "outputId": "d7584c36-5435-40a2-af53-757915683d2a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 153
-        },
-        "outputId": "d7584c36-5435-40a2-af53-757915683d2a"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -1011,7 +1011,7 @@
         "!apt install graphviz\n",
         "!pip install pydot pydot-ng"
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1033,11 +1033,11 @@
       "metadata": {
         "id": "4Hrgv5R2gewH",
         "colab_type": "code",
+        "outputId": "8ba06c18-4310-4b4b-923d-ebd6f6f13a5e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 540
-        },
-        "outputId": "8ba06c18-4310-4b4b-923d-ebd6f6f13a5e"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -1051,7 +1051,7 @@
         "plot_model(model, show_shapes=True, show_layer_names=True, to_file='model.png')\n",
         "Image(retina=True, filename='model.png')"
       ],
-      "execution_count": 63,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1134,18 +1134,18 @@
       "metadata": {
         "id": "n9r5tfoBP8h0",
         "colab_type": "code",
+        "outputId": "74740cd7-6c19-4504-e7c1-d83686c38b28",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "74740cd7-6c19-4504-e7c1-d83686c38b28"
+        }
       },
       "cell_type": "code",
       "source": [
         "print(df['label'].values[100])\n",
         "one_hot_labels[100][df['label'].values[100]]"
       ],
-      "execution_count": 65,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1172,11 +1172,11 @@
       "metadata": {
         "id": "3rTs0esBQYFY",
         "colab_type": "code",
+        "outputId": "c66f8fea-f3a5-4808-9719-284078be9e68",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
-        },
-        "outputId": "c66f8fea-f3a5-4808-9719-284078be9e68"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -1199,7 +1199,7 @@
         "    verbose=1,  # Logs once per epoch.\n",
         "    batch_size=256)\n"
       ],
-      "execution_count": 66,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1312,17 +1312,17 @@
       "metadata": {
         "id": "OS-w2-Ssdf2U",
         "colab_type": "code",
+        "outputId": "831c0017-849c-4ac8-afa6-df7fd2dc7d43",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 735
-        },
-        "outputId": "831c0017-849c-4ac8-afa6-df7fd2dc7d43"
+        }
       },
       "cell_type": "code",
       "source": [
         "visualize_training_history(history)"
       ],
-      "execution_count": 68,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1357,7 +1357,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "### Visualize the Confussion Matrix"
+        "## Test the model on some examples"
       ]
     },
     {
@@ -1380,7 +1380,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## Test the model on some examples"
+        "### Visualize the Confusion Matrix"
       ]
     },
     {
@@ -1397,11 +1397,11 @@
       "metadata": {
         "id": "YCN3NkTIpJ1h",
         "colab_type": "code",
+        "outputId": "36692bf0-9f90-4705-d063-0cba3bb2de97",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "36692bf0-9f90-4705-d063-0cba3bb2de97"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -1415,7 +1415,7 @@
         "print(text_sequences.shape)\n",
         "print(encoded_docs.shape)"
       ],
-      "execution_count": 122,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1488,11 +1488,11 @@
       "metadata": {
         "id": "ikMCA_CDfL1P",
         "colab_type": "code",
+        "outputId": "8797e202-c56d-49ff-af14-c7e4ff888158",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 714
-        },
-        "outputId": "8797e202-c56d-49ff-af14-c7e4ff888158"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -1525,7 +1525,7 @@
         "    verbose=1,  # Logs once per epoch.\n",
         "    batch_size=256)"
       ],
-      "execution_count": 90,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1590,11 +1590,11 @@
       "metadata": {
         "id": "pd1c-OFDfcib",
         "colab_type": "code",
+        "outputId": "9a9dcb29-6969-46cc-dc69-501852d9312c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 272
-        },
-        "outputId": "9a9dcb29-6969-46cc-dc69-501852d9312c"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -1622,7 +1622,7 @@
         "    \n",
         "    return prediction"
       ],
-      "execution_count": 95,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1696,11 +1696,11 @@
       "metadata": {
         "id": "bu6GEyAj3Uah",
         "colab_type": "code",
+        "outputId": "83fe1739-46d4-40af-befb-0949c6336ec4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1117
-        },
-        "outputId": "83fe1739-46d4-40af-befb-0949c6336ec4"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -1708,7 +1708,7 @@
         "  \n",
         "  visualize_embeddings(x_titles)"
       ],
-      "execution_count": 121,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1728,17 +1728,17 @@
       "metadata": {
         "id": "MSUoi59D4YGM",
         "colab_type": "code",
+        "outputId": "90f177b3-e3ed-4414-a85f-3d859efd27d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 3149
-        },
-        "outputId": "90f177b3-e3ed-4414-a85f-3d859efd27d3"
+        }
       },
       "cell_type": "code",
       "source": [
         "df.head(100)"
       ],
-      "execution_count": 99,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
